# memoryManagement

./: CMakeLists.txt  README.md
src/: memLinkedList.h  tests.c
